<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:splitMotionEvents="false"
    android:windowSoftInputMode="adjustPan"
    tools:context=".ui.MainActivity" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomBar"
        android:fillViewport="true"
        android:windowSoftInputMode="adjustUnspecified" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:splitMotionEvents="false" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="38dp"
                android:background="@drawable/border"
                android:splitMotionEvents="false" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/backgroundtop"
                    android:splitMotionEvents="false" >

                    <ImageView
                        android:id="@+id/logoID"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingBottom="1dp"
                        android:paddingTop="1dp"
                        android:src="@drawable/icon" />

                    <TextView
                        android:id="@+id/serif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:gravity="center"
                        android:paddingBottom="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/info_text"
                        android:textColor="#CBC5C5" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layoutID1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:splitMotionEvents="false" >

                <EditText
                    android:id="@+id/userField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_owner_name"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:textSize="16sp" >
                </EditText>

                <requestFocus />

                <LinearLayout
                    android:id="@+id/trustedPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/userField"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:prompt="@string/country_prompt"
                        android:spinnerMode="dialog" />

                    <EditText
                        android:id="@+id/userPhoneField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="2dp"
                        android:layout_marginStart="2dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/hint_authorize"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:textSize="16sp" >
                    </EditText>

                    <Button
                        android:id="@+id/testNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:background="@drawable/button_background"
                        android:drawableLeft="@drawable/message"
                        android:drawablePadding="5dp"
                        android:minHeight="40dp"
                        android:minWidth="1dp"
                        android:text="@string/test_button_text"
                        android:textAllCaps="false"
                        android:textColor="#9F9797"
                        android:textSize="9sp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/userEmailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/trustedPhoneNumber"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textSize="16sp" >
                </EditText>
            </RelativeLayout>

            <TextView
                android:id="@+id/registeredSimView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:text="@string/register_sim"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imageView01"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#CCCCCC"
                android:paddingTop="50dp" />

            <ListView
                android:id="@+id/simCardsList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:isScrollContainer="false" >
            </ListView>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#ff000000"
        android:splitMotionEvents="false" >

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/save"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:minHeight="40dp"
            android:minWidth="1dp"
            android:text="@string/save_button_text"
            android:textAllCaps="false"
            android:textColor="#9F9797"
            android:textSize="9sp" />

        <Button
            android:id="@+id/infoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/settingButton"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/settingButton"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/info"
            android:drawablePadding="5dp"
            android:minHeight="40dp"
            android:minWidth="1dp"
            android:text="@string/info_button_text"
            android:textAllCaps="false"
            android:textColor="#9F9797"
            android:textSize="9sp" />

        <Button
            android:id="@+id/settingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/saveButton"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/settings"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:minHeight="40dp"
            android:minWidth="1dp"
            android:textAllCaps="false"
            android:textColor="#9F9797"
            android:textSize="9sp" />
    </RelativeLayout>

</RelativeLayout>